# forge-ai

./: .gitignore  CHANGELOG.rst  LICENSE  README.md  pyproject.toml
skins/claude-code/.claude-plugin/: plugin.json
skins/claude-code/hooks/: hooks.json
skins/claude-code/scripts/: lint-on-edit.sh  verify-build.sh
src/architect/: __init__.py  cli.py
src/architect/core/: runner.py  session.py
src/architect/executor/: commands.py  driver.py  pipeline_cli.py  pre_pr_gate.py
src/architect/planner/: commands.py  driver.py
src/architect/prompts/: architect-topdown.md  enrichment.md  judge.md  recon.md  refiner.md
src/architect/providers/: claude.py  protocol.py
src/forge/: __init__.py  cli.py  setup.py
src/forge/core/: __init__.py  events.py  logging.py  runner.py  session.py  state.py
src/forge/dashboard/: commands.py  dashboard.html  launch.sh  server.py  session-detail.html  watch-status-loop.sh  watch-status.sh
src/forge/executor/: commands.py  driver.py  pipeline_cli.py
src/forge/planner/: commands.py  driver.py
src/forge/prompts/: architect-bottomup.md  architect-topdown.md  critic.md  enrichment.md
src/forge/providers/: claude.py  models.py
tests/: test_setup.py
tests/core/: test_events.py  test_session.py
tests/executor/: helpers.py  test_checkpoint.py  test_cleanup.py  test_evidence.py  test_pipeline_cli.py  test_pre_pr_gate.py  test_registry.py  test_runner.py  test_state.py  test_templates.py  test_utils.py
tests/planner/: test_cleanup.py  test_driver.py  test_evidence.py  test_state.py
tests/providers/: test_claude.py
(+59 files in other folders)
