[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgeai"
version = "0.1.0"
description = "Adversarial multi-agent planning and deterministic pipeline execution."
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = ["jsonschema>=4.0"]

[project.scripts]
forge = "forge.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
